# aoc2022

./: .gitignore  Cargo.toml  README.md
src/1/: input.txt  input_processor.rs  main.rs
src/10/: input_processor.rs  main.rs
src/11/: input_processor.rs  main.rs
src/12/: input_processor.rs  main.rs
src/2/: input_processor.rs  main.rs
src/3/: input_processor.rs  main.rs
src/4/: main.rs
src/5/: input_processor.rs  main.rs
src/6/: input_processor.rs  main.rs
src/7/: input_processor.rs  main.rs
src/8/: input_processor.rs  main.rs
src/9/: input_processor.rs  main.rs
src/lib/: display.rs  input_parser.rs  lib.rs  math.rs
template/: main.rs
