[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "1"
path = "src/1/main.rs"

[[bin]]
name = "2"
path = "src/2/main.rs"

[[bin]]
name = "3"
path = "src/3/main.rs"

[[bin]]
name = "4"
path = "src/4/main.rs"

[[bin]]
name = "5"
path = "src/5/main.rs"

[[bin]]
name = "6"
path = "src/6/main.rs"

[[bin]]
name = "7"
path = "src/7/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
csv = "1.1"
itertools = "0.10.5"
num-traits = "0.2"
num-derive = "0.3"
regex = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
